Fixed table and data insert scaling on small screens

--- a/public/css/user/userPanel.css
+++ b/public/css/user/userPanel.css
@@ -107,3 +107,7 @@ td {
         margin-top: 50px;
     }
 }
+
+table{
+    min-height: 250px;
+}
